--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
       run: docker run -itd --name python-hello -p 8080:8080   my-image-name:latest
     - run: sleep 5 && curl localhost:8080
     - name: change image name 
-      run: docker tag my-image-name:latest lidorlg/github-repo:latest
+      run: docker tag my-image-name:latest ddriham/github-action-hello:latest
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
