--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Checkout
     - uses: actions/checkout@v3
     - name: install requirements
     - run: pip install -r requirements.txt
     - name: run the application
-    - run: python3 app.py
+    - run: python3 app.py &
     - name: test
     - run: curl localhost:8080
