--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,15 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       
-      - name: install requirements
+      - name: pip came to town
         run: pip install -r requirements.txt
-      
-      - name: run the application
-        run: python3 app.py &
-      
-      - name: test
-        run: sleep 5 && curl localhost:8080
     
+
+  
